--- a/index.html
+++ b/index.html
@@ -1,14 +1,455 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+
 </head>
+
 <body>
-    
+    <div id="banner">
+        <div class="container">
+            <h2>module</h2>
+            <h1>The best view comes after the hardest climb.</h1>
+            <p>HandCrafted by
+                <a href="">FreeHTML%.co</a>
+            </p>
+            <button class="btn btn-success">get started</button>
+        </div>
+    </div>
+    <header>
+        <div class="container">
+            <h1 class="col-sm-4">
+                <a href="">module</a>
+            </h1>
+            <nav class="col-sm-8">
+                <ul>
+                    <li>
+                        <a href="">home</a>
+                    </li>
+                    <li>
+                        <a href="">about</a>
+                    </li>
+                    <li>
+                        <a href="">blog</a>
+                    </li>
+                    <li>
+                        <a href="">contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main style="background: #f4f4f4">
+        <div id="business">
+            <div class="container">
+                <h1 class="title">Business to the next level</h1>
+                <p class="description">Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the blind
+                    texts.
+                </p>
+                <img src="cover_bg_1.jpg" alt="blog">
+                <div class="card">
+                    <h1>argular JS</h1>
+                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
+                        blind texts.</p>
+                </div>
+                <div class="card">
+                    <h1>node JS</h1>
+                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
+                        blind texts.</p>
+                </div>
+                <div class="card">
+                    <h1>Django Python</h1>
+                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
+                        blind texts.</p>
+                </div>
+                <br>
+                <button class="btn btn-success"><i class="fa fa-caret-right"></i>   watch our video</button>
+            </div>
+        </div>
+        <div id="boxes">
+            <div class="container">
+                <div class="box">
+                    <i class="fa fa-gg"></i>
+                    <div class="infor">
+                        <h1>marketing</h1>
+                        <p>Facills ispum reprehendent nemo motestias.Aut cum mollitia reprehenderit.</p>
+                        <a href="">Learn more</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fa fa-snowflake-o"></i>
+                    <div class="infor">
+                        <h1>search engine</h1>
+                        <p>Facills ispum reprehendent nemo motestias.Aut cum mollitia reprehenderit.</p>
+                        <a href="">Learn more</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fa fa-folder-o"></i>
+                    <div class="infor">
+                        <h1>earn money</h1>
+                        <p>Facills ispum reprehendent nemo motestias.Aut cum mollitia reprehenderit.</p>
+                        <a href="">Learn more</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fa fa-glass"></i>
+                    <div class="infor">
+                        <h1>entrepreneur</h1>
+                        <p>Facills ispum reprehendent nemo motestias.Aut cum mollitia reprehenderit.</p>
+                        <a href="">Learn more</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fa fa-balance-scale"></i>
+                    <div class="infor">
+                        <h1>stragic plan</h1>
+                        <p>Facills ispum reprehendent nemo motestias.Aut cum mollitia reprehenderit.</p>
+                        <a href="">Learn more</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fa fa-comment-o"></i>
+                    <div class="infor">
+                        <h1>support</h1>
+                        <p>Facills ispum reprehendent nemo motestias.Aut cum mollitia reprehenderit.</p>
+                        <a href="">Learn more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="our-gallery">
+            <div class="container">
+                <h1 class="title">Our gallery</h1>
+                <p class="description">Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the blind
+                    texts.
+                </p>
+                <div class="col">
+                    <div class="img-left" style="background:url('cover_bg_2.jpg');">
+                        <h2>creative</h2>
+                        <h1 class="street">Wal in the wooden street</h1>
+                    </div>
+                    <div class=" img-right" style="background:url('cover_bg_3.jpg');">
+                        <h2>creative</h2>
+                        <h1 class="street">Wal in the wooden street</h1>
+                    </div>
+
+                </div>
+                <div class="col">
+
+                    <div class=" img-right" style="background:url('cover_bg_2.jpg');">
+                        <h2>creative</h2>
+                        <h1 class="street">Wal in the wooden street</h1>
+                    </div>
+                    <div class="img-left" style="background:url('blog-1.jpg');">
+                        <h2>creative</h2>
+                        <h1 class="street">Wal in the wooden street</h1>
+                    </div>
+
+                </div>
+                <br>
+                <button class="btn btn-success">see gallery</button>
+
+            </div>
+        </div>
+        <div id="our-team">
+            <div class="container">
+                <h1 class="title">our team</h1>
+                <p class="description">Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the blind
+                    texts.
+                </p>
+                <div class="box">
+                    <img src="person_1.jpg" alt="">
+                    <h1>Jean doe, XYZ Co</h1>
+                    <h2>
+                        <i>Designer</i>
+                    </h2>
+                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
+                        blind texts.Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
+                        blind texts.</p>
+                </div>
+                <div class="box">
+                    <img src="person_2.jpg" alt="">
+                    <h1>Jean doe, XYZ Co</h1>
+                    <h2>
+                        <i>Designer</i>
+                    </h2>
+                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
+                        blind texts.Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
+                        blind texts.</p>
+                </div>
+                <div class="box">
+                    <img src="person_3.jpg" alt="">
+                    <h1>Jean doe, XYZ Co</h1>
+                    <h2>
+                        <i>Designer</i>
+                    </h2>
+                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
+                        blind texts.Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
+                        blind texts.</p>
+                </div>
+            </div>
+        </div> -->
+        <div id="our-experties">
+            <div class="container">
+                <h1 class="title">our experties</h1>
+                <p class="description">Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the blind
+                    texts.
+                </p>
+                <div class="box">
+                    <i class="fa fa-heart-o"></i>
+                    <h1>web design</h1>
+                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
+                        blind texts.</p>
+                </div>
+                <div class="box">
+                    <i class="fa fa-heart-o"></i>
+                    <h1>web design</h1>
+                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
+                        blind texts.</p>
+                </div>
+                <div class="box">
+                    <i class="fa fa-heart-o"></i>
+                    <h1>web design</h1>
+                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
+                        blind texts.</p>
+                </div>
+                <div class="box">
+                    <i class="fa fa-heart-o"></i>
+                    <h1>web design</h1>
+                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
+                        blind texts.</p>
+                </div>
+                <div class="box">
+                    <i class="fa fa-heart-o"></i>
+                    <h1>web design</h1>
+                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
+                        blind texts.</p>
+                </div>
+                <div class="box">
+                    <i class="fa fa-heart-o"></i>
+                    <h1>web design</h1>
+                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
+                        blind texts.</p>
+                </div>
+            </div>
+        </div>
+        <div id="blog">
+            <div class="container">
+                <h1 class="title">recent from blog</h1>
+                <p class="description">Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the blind
+                    texts.
+                </p>
+                <div class="card">
+                    <img src="cover_bg_1.jpg" alt="blog">
+                    <div class="infor">
+                        <h1>Web Design for the Future</h1>
+                        <h2>
+                            <i>Sep, 15th</i>
+                        </h2>
+                        <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live
+                            the blind texts.
+                        </p>
+                        <a href="">learn more...</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="cover_bg_2.jpg" alt="blog">
+                    <div class="infor">
+                        <h1>Web Design for the Future</h1>
+                        <h2>
+                            <i>Sep, 15th</i>
+                        </h2>
+                        <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live
+                            the blind texts.
+                        </p>
+                        <a href="">learn more...</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="cover_bg_3.jpg" alt="blog">
+                    <div class="infor">
+                        <h1>Web Design for the Future</h1>
+                        <h2>
+                            <i>Sep, 15th</i>
+                        </h2>
+                        <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live
+                            the blind texts.
+                        </p>
+                        <a href="">learn more...</a>
+                    </div>
+                </div>
+
+
+                <button class="btn btn-success">our blog</button>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="container">
+            <div class="above">
+                <div class="above-link">
+                    <h1>Sevices</h1>
+                    <nav>
+
+                        <ul>
+                            <li>
+                                <a href="">web development</a>
+                            </li>
+                            <li>
+                                <a href="">design strategy</a>
+                            </li>
+                            <li>
+                                <a href="">UI/UX planning</a>
+                            </li>
+                            <li>
+                                <a href="">Photographer</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="above-link">
+                    <h1>Company</h1>
+                    <nav>
+
+                        <ul>
+                            <li>
+                                <a href="">about us</a>
+                            </li>
+                            <li>
+                                <a href="">our team</a>
+                            </li>
+                            <li>
+                                <a href="">contact us</a>
+                            </li>
+                            <li>
+                                <a href="">support</a>
+                            </li>
+                            <li>
+                                <a href="">career</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="above-link">
+                    <h1>our apps</h1>
+                    <nav>
+
+                        <ul>
+                            <li>
+                                <a href="">mobile application</a>
+                            </li>
+                            <li>
+                                <a href="">online payment</a>
+                            </li>
+                            <li>
+                                <a href="">time monitoring</a>
+                            </li>
+                            <li>
+                                <a href="">android payment gateway</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="above-link">
+                    <h1>downloads</h1>
+                    <nav>
+
+                        <ul>
+                            <li>
+                                <a href="">apple store</a>
+                            </li>
+                            <li>
+                                <a href="">google play</a>
+                            </li>
+                            <li>
+                                <a href="">windowns store</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="above-link">
+                    <h1>Sevices</h1>
+                    <nav>
+
+                        <ul>
+                            <li>
+                                <a href="">web development</a>
+                            </li>
+                            <li>
+                                <a href="">design strategy</a>
+                            </li>
+                            <li>
+                                <a href="">UI/UX planning</a>
+                            </li>
+                            <li>
+                                <a href="">Photographer</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="above-link">
+                    <h1>connect</h1>
+                    <nav>
+
+                        <ul>
+                            <li>
+                                <a href="">follow on twitter</a>
+                            </li>
+                            <li>
+                                <a href="">like on facebook</a>
+                            </li>
+                            <li>
+                                <a href="">circle with google</a>
+                            </li>
+                            <li>
+                                <a href="">partner with linkedin</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+
+
+            </div>
+            <div class="under">
+                <nav>
+                    <ul>
+                        <li>
+                            <i class="fa fa-pinterest-square"></i>
+                        </li>
+                        <li>
+                            <i class="fa fa-google-plus"></i>
+                        </li>
+                        <li>
+                            <i class="fa fa-twitter"></i>
+                        </li>
+                        <li>
+                            <i class="fa fa-facebook-square"></i>
+                        </li>
+                        <li>
+                            <i class="	fa fa-instagram"></i>
+                        </li>
+                    </ul>
+                </nav>
+                <p>CopyRight 2016 Free HTML
+                    <a href="">Module</a>. All Rights Reserved
+                    <br> Made with
+                    <i class="fa fa-heart"></i> by
+                    <a href="">Freehtml.co</a> /Demo Images:
+                    <a href="">Unsplash</a>
+                </p>
+
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
