--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         blind texts.</p>
                 </div>
             </div>
-        </div> -->
+        </div>
         <div id="our-experties">
             <div class="container">
                 <h1 class="title">our experties</h1>
